# mini_timeline_scroll

./: CHANGELOG.md  CMakeLists.txt  README.md  dependency.sh  main.c  make_timeline_scroll.sh  makefile  video_fetch.h
.github/workflows/: cmake-multi-platform.yml  package_to_app.yml
include/: MainWindow.h  SubtitleImports.h  timecode_check.h  video_backend.h  video_export_actions.h  video_fetch.h  video_hotkey_actions.h  video_implement.h  video_window.h
legacy/: README.md
src/: MainWindow.cpp  MainWindowActions.cpp  ScreenshotVideo.cpp  SubtitleImports.cpp  VideoWidget.cpp  main.cpp  timecode_check.c  video_backend.c  video_fetch.c  video_hotkey_actions.c  video_implement.c  video_window.cpp  video_windowloads.cpp
